--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-11-08  Martin Baulig  <martin@ximian.com>
 
+	* interface/Report.cs
+	(ReportWriter.ctor): Only use `MDB_DEBUG_FLAGS' and parse it like
+	the `-debug-flags' command line argument; kill `MDB_DEBUG_OUTPUT'.
+
+2008-11-08  Martin Baulig  <martin@ximian.com>
+
 	* backend/SingleSteppingEngine.cs
 	(SSE.ManagedCallback): Insert a breakpoint on the last managed
 	frame to fix a race condition - see the comments in the source code.
