--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-11-10  Martin Baulig  <martin@ximian.com>
+
+	* backend/arch/Architecture.cs
+	(Architecture.GetLMF): Added `ref TargetAddress lmf_address'
+	argument; return the address of the next LMF.
+
+	* classes/Backtrace.cs
+	(Backtrace.TryLMF): Allow multiple LMF frames.
+
 2008-11-08  Martin Baulig  <martin@ximian.com>
 
 	* interface/Report.cs
