--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,12 @@
 
 2008-11-17  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Expression.cs
+	(ExpressionParser.MonoObjectToString): Mark this as [Obsolete], it
+	is not an official API in 2.2 and has already been replaced in trunk.
+
+2008-11-17  Martin Baulig  <martin@ximian.com>
+
 	* configure.in: Add -fno-strict-aliasing to CFLAGS.
 
 2008-11-11  Martin Baulig  <martin@ximian.com>
