--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2008-11-22  Martin Baulig  <martin@ximian.com>
+
+	* backend/server/server.h
+	(SignalInfo): Add `sigfpe', `sigquit', `sigabrt', `sigsegv',
+	`sigill' and `sigbus'.
+
+	* backend/Inferior.cs
+	(Inferior.IsManagedSignal): New public method.
+
+	* classes/DebuggerConfiguration.cs
+	(DebuggerConfiguration.StopOnManagedSignals): New configuration
+	option.
+
+	* backend/MonoThreadManager.cs
+	(MonoThreadManager.HandleChildEvent): Add support for it here.
+
+	* classes/GUIManager.cs
+	(GUIManager.StartGUIManager): Set `StopOnManagedSignals' to false.
+
 2008-11-19  Martin Baulig  <martin@ximian.com>
 
 	* interface/Report.cs
