--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-02  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Check which NUnit version we're using.
+
+	* build/Makefile.am: Add support for NUnit 2.3.
+
 2008-11-26  Martin Baulig  <martin@ximian.com>
 
 	* languages/TargetMember.cs
