--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-03  Martin Baulig  <martin@ximian.com>
+
+	* classes/ExpressionEvaluator.cs: Add some more error checking.
+
 2008-12-02  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/*.cs: If there is more than one test in one file,
