--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-12-12  Martin Baulig  <martin@ximian.com>
+
+	* backend/EventQueue.cs (DebuggerWaitHandle): Implement
+	IDisposable and free unmanaged resources.
+
+	* backend/server/mutex.c
+	(mono_debugger_mutex_free): New function.
+	(mono_debugger_cond_free): New function.
+
 2008-12-09  Martin Baulig  <martin@ximian.com>
 
 	* languages/native/NativeLanguage.cs
