--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-12-12  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Interpreter.cs (Interpreter.WaitAll): Reset
+	`seen_threads' and `wait_list' after receiving a process event; a
+	process may have exited.
+
+2008-12-12  Martin Baulig  <martin@ximian.com>
+
 	* backend/EventQueue.cs (DebuggerWaitHandle): Implement
 	IDisposable and free unmanaged resources.
 
