2009-01-21  Martin Baulig  <martin@ximian.com>
	Add support for decimal.

	* languages/TargetFundamentalType.cs
	(FundamentalKind): Added `Decimal'.

	* languages/mono/MonoLanguageBackend.cs
	(MonoBuiltinTypeInfo): Added `DecimalType'.


svn path=/trunk/debugger/; revision=124037

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-01-21  Martin Baulig  <martin@ximian.com>
+
+	Add support for decimal.
+
+	* languages/TargetFundamentalType.cs
+	(FundamentalKind): Added `Decimal'.
+
+	* languages/mono/MonoLanguageBackend.cs
+	(MonoBuiltinTypeInfo): Added `DecimalType'.
+
 2009-01-19  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoVariable.cs
