--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-01-27  Martin Baulig  <martin@ximian.com>
+
+	* frontend/ScriptingContext.cs
+	(ScriptingContext.HandleDebuggerDisplay): Improve API: take a
+	`DebuggerDisplayAttribute' parameter and return both the value and
+	the type.
+
 2009-01-26  Martin Baulig  <martin@ximian.com>
 
 	Add support for the [DebuggerTypeProxy] attribute.
