2008-12-02  Martin Baulig  <martin@ximian.com>
	**** Backport of 120452-120454 ****

	* test/testsuite/*.cs: If there is more than one test in one file,
	NUnit 2.3 may run them in any random order.

	* backend/BreakpointManager.cs
	(BreakpointManager.InitializeAfterFork): Remove all non-global
	breakpoint, but don't force them to be `SourceBreakpoint's.


svn path=/branches/mono-2-2/debugger/; revision=126342

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2008-12-02  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 120452-120454 ****
+
+	* test/testsuite/*.cs: If there is more than one test in one file,
+	NUnit 2.3 may run them in any random order.
+
+	* backend/BreakpointManager.cs
+	(BreakpointManager.InitializeAfterFork): Remove all non-global
+	breakpoint, but don't force them to be `SourceBreakpoint's.
+
 2008-11-17  Martin Baulig  <martin@ximian.com>
 
 	Released version 2.2 "Sidney" of the Mono Debugger.
