2008-12-08  Martin Baulig  <martin@ximian.com>
	**** Backport of 120992 ****

	* backend/server/i386-arch.c (x86_arch_child_stopped): Send
	`STOP_ACTION_STOPPED' without checking for breakpoint if we didn't
	receive a SIGTRAP.


svn path=/branches/mono-2-2/debugger/; revision=126343

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-12-08  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 120992 ****
+
+	* backend/server/i386-arch.c (x86_arch_child_stopped): Send
+	`STOP_ACTION_STOPPED' without checking for breakpoint if we didn't
+	receive a SIGTRAP.
+
+	* backend/server/x86_64-arch.c (x86_arch_child_stopped): Likewise.
+
 2008-12-02  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 120452-120454 ****
