--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-01-15  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 123467 ****
+
+	* backend/server/x86_64-arch.c
+	(x86_arch_child_stopped): Fix the regression from r120992 (Dec 8th):
+	Check for callbacks first because we expect to receive a SIGSEGV
+	on the non-executable stack.
+
 2008-12-12  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 121402 ****
