--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,18 @@
 2009-03-02  Martin Baulig  <martin@ximian.com>
 
+	* languages/mono/MonoRuntime.cs
+	(MonoRuntime.GetGenericClass): Reflect latest runtime changes:
+	starting with version 81.0, `MonoGenericInst.type_argv' is a tail
+	array and not a pointer anymore.  Check for the runtime version
+	and support both versions here.
+
+2009-03-02  Martin Baulig  <martin@ximian.com>
+
 	* backend/MonoThreadManager.cs
+	(MonoDebuggerInfo): Accept runtime major versions 80 and 81.
 	(MonoDebuggerInfo.MinorVersion): New public readonly field.
-	(MonoThreadManager.ThreadCreated): Starting with runtime version 80.1,
+	(MonoDebuggerInfo.MajorVersion): New public readonly field.
+	(MonoThreadManager.ThreadCreated): Starting with runtime version 81.0,
 	there are now 3 daemon threads.
 
 2009-02-25  Martin Baulig  <martin@ximian.com>
