--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-03-03  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/NUnit.cs
+	(NUnitInterpreter.IgnoreThreadCreation): New public property to
+	disable tracking of child threads.
+
+	* test/testsuite/TestAppDomain.cs: Use it here.
+	* test/testsuite/TestAppDomain-Module.cs: And here.
+
 2009-03-02  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoRuntime.cs
