--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-04  Martin Baulig  <martin@ximian.com>
+
+	* test/testsuite/testnativefork.cs: Add `[Category ("NotWorking")]'.
+
 2009-03-03  Martin Baulig  <martin@ximian.com>
 
 	* test/testsuite/NUnit.cs
