--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-03-05  Martin Baulig  <martin@ximian.com>
+
+	* languages/mono/MonoSymbolFile.cs
+	(MonoSymbolFile.GetMethod): Also search in all include files.
+
 2009-03-09  Martin Baulig  <martin@ximian.com>
 
 	* classes/DebuggerSession.cs
