--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-05  Martin Baulig  <martin@ximian.com>
+
+	* MonoSymbolTable.cs
+	(CompileUnitEntry.IncludeFiles): New public property.
+	(CompileUnitEntry.ReadData): Also read include files.
+
 2008-06-18  Martin Baulig  <martin@ximian.com>
 
 	* MonoSymbolTable.cs
